# mcpkit-data

./: .coveragerc  .gitignore  CURSOR_CONFIG.md  INTEGRATION_SETUP.md  INTEGRATION_TESTS.md  MCP_TOOL_DESIGN_GUIDE.md  Makefile  PARAMETER_VALIDATION_FIXES.md  README.md  SAFETY_AUDIT.md  TOOLS_ANALYSIS.md  TOOLS_TO_REVIEW.md  check_config.py  consume_and_export.py  cursor_config_example.json  docker-compose.yml  nuke_and_recreate_git.sh  pyproject.toml  reload_mcp_server.sh  run_integration_tests.sh  test_avro_decoding.py
mcpkit/: __init__.py  server.py  server_models.py  server_utils.py
mcpkit/core/: aws_ops.py  chart_ops.py  db.py  decode.py  duckdb_ops.py  evidence.py  formats.py  guards.py  http_ops.py  jdbc.py  json_tools.py  kafka_client.py  nomad_consul.py  pandas_ops.py  polars_ops.py  proc.py  registry.py  repo_ops.py  schema_registry.py
mcpkit/server_tools/: __init__.py  aws_tools.py  chart_tools.py  dataset_ops_tools.py  db_tools.py  decode_tools.py  duckdb_tools.py  formats_tools.py  ge_tools.py  http_tools.py  json_tools.py  kafka_tools.py  nomad_consul_tools.py  pandas_tools.py  polars_tools.py  registry_tools.py  repo_tools.py  schema_registry_tools.py
tests/: COVERAGE.md  README_INTEGRATION.md  conftest.py  conftest_integration.py  conftest_mcp.py  test_aws_tools.py  test_chart_tools.py  test_db_tools.py  test_decode_unit.py  test_duckdb_tools.py  test_formats_evidence_tools.py  test_formats_more.py  test_ge_tool.py  test_guards.py  test_guards_more.py  test_json_tools.py  test_json_tools_more.py  test_kafka_client_unit.py  test_kafka_integration.py  test_kafka_tools.py  test_pandas_tools.py  test_parameter_validation.py  test_polars_tools.py  test_proc_unit.py  test_registry_tools.py  test_repo_tools.py  test_schema_registry_tools.py  utils_mcp.py
tests/integration/: README.md  __init__.py  test_aws_mcp.py  test_chart_mcp.py  test_dataset_ops_mcp.py  test_db_mcp.py  test_decode_mcp.py  test_duckdb_edge_cases_mcp.py  test_duckdb_mcp.py  test_duckdb_more_coverage_mcp.py  test_evidence_more_coverage_mcp.py  test_evidence_more_edge_cases_mcp.py  test_formats_mcp.py  test_formats_more_coverage_mcp.py  test_formats_more_edge_cases_mcp.py  test_ge_mcp.py  test_guards_mcp.py  test_guards_more_mcp.py  test_http_edge_cases_mcp.py  test_http_mcp.py  test_infrastructure_mcp.py  test_json_mcp.py  test_json_more_edge_cases_mcp.py  test_json_tools_more_mcp.py  test_kafka_mcp.py  test_pandas_edge_cases_mcp.py  test_pandas_mcp.py  test_pandas_more_edge_cases_mcp.py  test_polars_mcp.py  test_polars_more_edge_cases_mcp.py  test_polars_ops_more_mcp.py  test_proc_mcp.py  test_proc_more_mcp.py  test_reconcile_mcp.py  test_registry_mcp.py  test_registry_more_mcp.py  test_repo_ops_more_mcp.py  test_schema_registry_mcp.py  test_server_error_handling_mcp.py  test_server_helpers_mcp.py
