[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpkit-data"
version = "0.1.0"
description = "MCP server with data engineering tools (Kafka, Schema Registry, JDBC, AWS, pandas, polars, duckdb)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2",
    "requests",
    "kafka-python",
    "fastavro",
    "protobuf",
    "jsonschema",
    "jmespath",
    "boto3",
    "pandas",
    "polars",
    "pyarrow",
    "duckdb",
    "matplotlib",
    "psycopg2-binary",
    "pymysql",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "responses",
    "mcp>=1.0.0",
    "moto>=5.0.0",
    "docker>=7.0.0",
    "psycopg2-binary>=2.9.0",
    "kafka-python>=2.0.0",
    "requests>=2.31.0",
]
integration = [
    "confluent-kafka",
]
ge = [
    "great-expectations",
]

[tool.setuptools]
packages = ["mcpkit", "mcpkit.core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
addopts = "--cov=mcpkit --cov-report=term-missing --cov-report=html"

